Fixing a few Visibility Issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,10 @@ body {
   top: 0;
   width: calc(100vw - 2rem);
   height: calc(100vh - 2rem);
-  overflow-y: scroll;
+
+  &:not(.talk) {
+    overflow-y: scroll;
+  }
 
   .inner-wrapper {
     margin-bottom: 8em;
